--- a/day04/ex02/project/static/templates/forms.html
+++ b/day04/ex02/project/static/templates/forms.html
@@ -2,13 +2,18 @@
 
 {% block content %}
 <div>
-<form method="POST">
+<form method="POST" action="/ex02/">
 	{% csrf_token %}
 	{{form}}
 	<input type="submit" value="Send Message">
 </form>
 </div>
 <dir>
-	{{message}}
+	<ul>
+		{% for number in messages %}
+		<p>
+			{{number}}
+		</p>
+		{% endfor %}
 </dir>
 {% endblock %}
